pi-cluster/cluster/apps/hue-exporter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: hue-exporter
  namespace: hue-exporter
spec:
  ingressClassName: traefik
  rules:
    - host: "hue-exporter.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hue-exporter
                port:
                  number: 9366
  tls:
    - hosts:
        - hue-exporter.${SECRET_DOMAIN}
      secretName: hue-exporter-tls
